--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="euc-kr">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+@charset "euc-kr";
+@font-face {
+    font-family: 'Pretendard';
+    src: url('./fonts/Pretendard-Regular.woff2') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    unicode-range: U+AC00-D7A3;
+}
+@font-face {
+    font-family: 'Pretendard';
+    src: url('./fonts/Pretendard-Bold.woff2') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    unicode-range: U+AC00-D7A3;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url('./fonts/Roboto-Regular.woff2') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url('./fonts/Roboto-Medium.woff2') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+body {
+    font-weight: 400;
+    font-family: 'Pretendard', 'Roboto', '돋움', 'Dotum';
+}
+p {
+    font-size:26px;
+}
+    </style>
 </head>
 <body>
-    test
+    <p style="font-weight:700;">123,456,789,000계좌인증을 위해</p>
+    <p style="font-family:'Roboto'; font-weight:700;">123,456,789,000</p>
+    <p style="font-family:'Roboto';">123,456,789,000</p>
 </body>
 </html>
